[package]
name = "wcloud"
version = "0.1.0"
authors = ["afrmtbl <afrmtbl@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true

# TODO: Have only the binary depending on clap
[dependencies]
regex = "1.7.3"
ab_glyph = "0.2.20"
image = "0.24.6"
palette = "0.6.1"
clap = "3.2.23"
csscolorparser = "0.6.2"
rayon = "1.7.0"
woff2 = { path = "../woff2-rs" }
nanorand = "0.7.0"

serde = { version = "1.0.164", optional = true }
serde_derive = { version = "1.0.164", optional = true }
serde_json = { version = "1.0.99", optional = true }

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }

[[bench]]
name = "create_wordcloud"
harness = false

[features]
visualize = ["dep:serde", "dep:serde_derive", "dep:serde_json"]
